admin-search input also checks under document_id now

--- a/DocSearch2.1/Views/Shared/_Form.cshtml
+++ b/DocSearch2.1/Views/Shared/_Form.cshtml
@@ -39,7 +39,7 @@
         </div>
         <div class="form-inputs col-md-12 row">
             <div class="filter col-md-3">
-                <label for="search">Search Description:</label>
+                <label for="search" style="font-size: 14px;">Search Description @if (TempData["Role"] != null && (string)TempData["Role"] == "Admin") {<span>/ Document Id</span>}:</label>
                 <input id="searchInputBox" type="search" name="searchTerm" />
                 <br />
             </div>
