--- a/DocSearch2.1/Views/Home/Index.cshtml
+++ b/DocSearch2.1/Views/Home/Index.cshtml
@@ -1,7 +1,6 @@
 ﻿@{
     ViewBag.Title = "Westland Archive System ";
     Layout = "~/Views/Shared/_Layout.cshtml";
-    //TempData.Keep("Role");
 }
 
 @*568801 is Ramins test public #, 34 is his folder_id*@
@@ -17,7 +16,7 @@
     @Html.Label("ClientId", "Client Id")
     @Html.TextBox("ClientId", 1186367); 
 
-    <input type="submit"@* name="Role"*@ value="Submit" />
+    <input type="submit" value="Submit" />
 }
 
 <br/><br />
