form now styled in a vertical bootstrap orientation, instead of the previous horizontal rows from bootstrap

--- a/DocSearch2.1/Content/Site.css
+++ b/DocSearch2.1/Content/Site.css
@@ -541,7 +541,7 @@ textarea {
 }
 
 #public_table_inner {
-    
+    padding: 0;
 }
 
 /*Believe is deprecated*/
@@ -654,5 +654,9 @@ select {
 }
 
 .customDates label {
+    margin: 0;
+}
+
+.main-form {
     margin: 0;
 }
